--- a/index.html
+++ b/index.html
@@ -28,5 +28,21 @@
         <div class="banner">
             <h1>Twitter do Alexandre Weber Dalabona</h1>       
         </div>
+        <div class="bar">
+            <div class="content">
+                <ul>
+                    <li class="active"><span>Tweets</span><strong>125</strong></li>
+                    <li><span>Followings</span><strong>120</strong></li>
+                    <li><span>Followers</span><strong>100</strong></li>
+                    <li><span>Favorites</span><strong>12</strong></li>
+                    <li><span>Lists</span><strong>2</strong></li>
+                    <li><span>Moments</span><strong>1</strong></li>
+                </ul>
+                <div class="actions">
+                    <button>Follow</button>
+                    <img src="/imgs/more.svg" alt="More">
+                </div>
+            </div>
+        </div>
     </body>
 </html>
