--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img class="icons" src="/imgs/twitter.svg" alt="Logo twitter">                
                 <div class="side">
                     <input type="text" placeholder="Search on Twitter">
-                    <img src="/imgs/avatar.svg" alt="Avatar">
+                    <img src="/imgs/avatar.jpg" alt="Avatar">
                     <button>Tweet</button>
                 </div>
             </div>
@@ -49,14 +49,16 @@
 
         <div class="wrapper-content content">
             <aside class="profile">
-                <img class="avatar" src="/imgs/avatar.svg" alt="Alexandre">
+                <img class="avatar" src="/imgs/avatar.jpg" alt="Alexandre">
                 <h1>Alexandre Weber Dalabona</h1>
-                <span>@alexandre</span>
-                <p>Alexandre Weber Dalabona</p>
+                <span>@alexandre_dalabona</span>
+                <p>28 anos, programador, Joinville - SC</p>
 
                 <ul class="list">
                     <li><img class="icons" src="/imgs/place.svg" alt="">Joinville, Brasil</li>
-                    <li><img class="icons" src="/imgs/url.svg" alt="">https://github.com/AlexandreWeber</li>
+                    <li><img class="icons" src="/imgs/url.svg" alt="">
+											<a href="https://github.com/AlexandreWeber">https://github.com/AlexandreWeber</a>
+										</li>
                     <li><img class="icons" src="/imgs/joined.svg" alt="">Joined October 2019</li>
                     <li><img class="icons" src="/imgs/birthday.svg" alt="">Born the 29th of March 1992</li>
                 </ul>
@@ -91,31 +93,48 @@
 
             </aside>
             <section class="timeline">
-                timeline
+                
             </section> 
-            <aside class="widgets">
+            <aside class="widgets follow">
                 <div class="widget follow">
                     <div class="title">
-                        <strong>Who to folloew</strong>
+                        <strong>Who to follow</strong>
                         <a href="">Refresh</a>
                         <a href="">View all</a>
                     </div>
                     <ul>
                         <li>
-                            <img class="icons" src="/imgs/avatar.svg" alt="Avatar">
-                            <div class="info">
-                                <strong>Spade<span>@spade_be</span></strong>
-                                <button>Follow</button>
-                            </div>
+                            <div class="profile">
+															<img class="" src="/imgs/batman.svg" alt="Avatar">
+															<div class="info">
+																	<strong>Batman<span> @batman</span></strong>
+																	<button>Follow</button>
+															</div>
+														</div>
+														<a href="">x</a>
                         </li>
-                        <li></li>
-                        <li></li>
+												<li>
+                            <div class="profile">
+															<img class="icons" src="/imgs/flash.svg" alt="Avatar">
+															<div class="info">
+																	<strong>The Flash<span> @flash</span></strong>
+																	<button>Follow</button>
+															</div>
+														</div>
+														<a href="">x</a>
+                        </li>
+                        <li>
+                            <div class="profile">
+															<img class="icons" src="/imgs/ww.svg" alt="Avatar">
+															<div class="info">
+																	<strong>Wonder Woman<span> @wonder_woman</span></strong>
+																	<button>Follow</button>
+															</div>
+														</div>
+														<a href="">x</a>
+                        </li>
                     </ul>
-                </div>
-                <div class="widget trends">
-                    
-                </div>
-
+                </div>                
             </aside>
         </div>
     </body>
